# leaves

./: CMakeLists.txt  partitions.csv
main/: CMakeLists.txt  app_config.h  idf_component.yml  main.c  main.c.backup  pwm.c  servo.c  servo.h
main/config/: nvs_config.c  nvs_config.h
main/core/: app_state.c  app_state.h  event_bus.c  event_bus.h  task_manager.c  task_manager.h
main/driver/: driver_as7341.c  driver_as7341.h  driver_button.c  driver_button.h  driver_i2c_soft.c  driver_i2c_soft.h  driver_scd41.c  driver_scd41.h  driver_ssd1306.c  driver_ssd1306.h  ei_classifier.cpp  ei_classifier.h
main/hardware/: button.c  button.h  scd41.c  scd41.h  sensor.c  sensor.h  servo.c  servo.h
main/homeassistant/: ha_config.h  ha_mqtt.c  ha_mqtt.h  ha_sensor.c  ha_sensor.h  ha_service.c  ha_service.h
main/http/: model_api.c  model_api.h
main/network/: mqtt_client.c  mqtt_wrapper.h  wifi_sta.c  wifi_sta.h
main/network/provision/: prov_dns.c  prov_dns.h  prov_html.h  prov_http.c  prov_http.h  prov_main.c  prov_main.h
main/sensor/: sensor.c
main/service/: ai_service.c  ai_service.h  display_service.c  display_service.c.backup  display_service.h  display_service.h.backup  ha_integration.c  ha_integration.h  notify.c  notify.h  sensor_service.c  sensor_service.h
main/storage/: storage.c  storage.h
main/system/: menu_actions.c  menu_actions.h  menu_display.c  menu_display.h  menu_system.c  menu_system.h  system_log.c  system_log.h
main/tasks/: task_ai.c  task_ai.h  task_auto_network.c  task_auto_network.h  task_network.c  task_network.h  task_provision.c  task_provision.h  task_sensor.c  task_sensor.h
main/wifi/: wifi_connect.c  wifi_connect.h
main/wifi/provision/: captive_portal.c  captive_portal.h  html.h  http_server.c  http_server.h  provision.c  provision.h
main/zsh2451-project-1-cpp-mcu-v1-impulse-#4/model-parameters/: model_metadata.h  model_variables.h
main/zsh2451-project-1-cpp-mcu-v1-impulse-#4/tflite-model/: tflite_learn_996344_18_compiled.cpp  tflite_learn_996344_18_compiled.h
main/zsh2451-project-1-cpp-mcu-v3-impulse-#4/: README.txt
main/zsh2451-project-1-cpp-mcu-v3-impulse-#4/model-parameters/: model_metadata.h  model_variables.h
main/zsh2451-project-1-cpp-mcu-v3-impulse-#4/tflite-model/: tflite_learn_996344_18_compiled.cpp  tflite_learn_996344_18_compiled.h
